--- a/src/main/resources/assets/maturidelight/lang/en_us.json
+++ b/src/main/resources/assets/maturidelight/lang/en_us.json
@@ -9,5 +9,13 @@
   "item.maturidelight.dough_raw": "Dough Raw",
   "block.maturidelight.takoyaki_maker": "Takoyaki Maker",
   "block.maturidelight.plate": "Plate",
-  "itemGroup.maturidelight": "MaturiDelight"
+  "itemGroup.maturidelight": "MaturiDelight",
+  "advancements.maturidelight.root.title": "MaturiDelight",
+  "advancements.maturidelight.root.description": "Learn the Festival food!",
+  "advancements.maturidelight.making_food.title": "Making Food",
+  "advancements.maturidelight.making_food.description": "Trying make on the Plate or Takoyaki Maker",
+  "advancements.maturidelight.extra_topping.title": "Extra Topping",
+  "advancements.maturidelight.extra_topping.description": "Put the Soysauce on the food",
+  "advancements.maturidelight.you_got_poison_me.title": "You Got Poison Me...",
+  "advancements.maturidelight.you_got_poison_me.description": "eat food with poisonous flowers"
 }
