--- a/src/main/resources/assets/maturidelight/lang/ja_jp.json
+++ b/src/main/resources/assets/maturidelight/lang/ja_jp.json
@@ -1,5 +1,5 @@
 {
-  "item.maturidelight.suspicious_item": "このたこ焼きは何か入ってる・・・",
+  "item.maturidelight.suspicious_item": "この食べ物は何か入ってる・・・",
   "item.maturidelight.takoyaki_raw": "生のたこ焼き",
   "item.maturidelight.takoyaki": "たこ焼き",
   "item.maturidelight.takoyaki_soysauce": "醬油をかけたたこ焼き",
