--- a/src/main/resources/assets/maturidelight/lang/en_us.json
+++ b/src/main/resources/assets/maturidelight/lang/en_us.json
@@ -6,6 +6,10 @@
   "item.maturidelight.okonomiyaki_raw": "Raw Okonomiyaki",
   "item.maturidelight.okonomiyaki": "Okonomiyaki",
   "item.maturidelight.okonomiyaki_soysauce": "Soysauce Okonomiyaki",
+  "item.maturidelight.yakisoba": "Yakisoba",
+  "item.maturidelight.yakisoba_soysauce": "Soysauce Yakisoba",
+  "item.maturidelight.yakisoba_raw": "Yakisoba",
+  "item.maturidelight.yakisoba_soysauce_raw": "Soysauce Yakisoba",
   "item.maturidelight.dough_raw": "Dough Raw",
   "block.maturidelight.takoyaki_maker": "Takoyaki Maker",
   "block.maturidelight.plate": "Plate",
